--- a/index.html
+++ b/index.html
@@ -12,18 +12,34 @@
 <body>
     <header>
         <div class="container-fluid">
-            <div class="row justify-content-around blue">
+            <div class="row justify-content-between blue">
                 <div class="col-4 align-self-center red">
 
                 </div>
-                <div class="col-4 align-self-center red">
+                <div class="col-2 align-self-center red">
                     
                 </div>
             </div>
         </div>
     </head>
     <main>
-        <div class="container"
+        <div class="container-fluid">
+            <div class="row justify-content-around first-row">
+                <div class="col-9 align-self-center first-col">
+
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row white">
+                <div class="col black"></div>
+                <div class="col black"></div>
+                <div class="col black"></div>
+                <div class="col black"></div>
+                <div class="col black"></div>
+                <div class="col black"></div>
+            </div>
+        </div>
     </main>
     <footer>
 
