[TEST] test inserimento in main

--- a/index.html
+++ b/index.html
@@ -31,13 +31,20 @@
             </div>
         </div>
         <div class="container-fluid">
-            <div class="row white">
-                <div class="col black"></div>
-                <div class="col black"></div>
-                <div class="col black"></div>
-                <div class="col black"></div>
-                <div class="col black"></div>
-                <div class="col black"></div>
+            <div class="row justify-content-around white">
+                <div class="col-9 gy-5 black"></div>
+                <div class="col-9 black"></div>
+                <div class="col-9 black"></div>
+                <div class="col-9 black"></div>
+                <div class="col-9 black"></div>
+                <div class="col-9 black"></div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row justify-content-around second-row">
+                <div class="col-9 align-self-center yellow">
+        
+                </div>
             </div>
         </div>
     </main>
