[TEST]prova riquadri main + agg. commenti html/css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Bootstrap</title>
 </head>
 <body>
+    <!--inizio header-->
     <header>
         <div class="container-fluid">
             <div class="row justify-content-between blue">
@@ -21,7 +22,9 @@
                 </div>
             </div>
         </div>
-    </head>
+    </header>
+    <!--fine header-->
+    <!--inizio main-->
     <main>
         <div class="container-fluid">
             <div class="row justify-content-around first-row">
@@ -47,9 +50,17 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid">
+            <div class="row justify-content-center third-row">
+                <div class="col-9 align-self-center green"></div>
+            </div>
+        </div>
     </main>
+    <!--fine main-->
+    <!--inizio footer-->
     <footer>
 
     </footer>
+    <!--fine footer-->
 </body>
 </html>
