[FEAT/STYLE]inserimento header

--- a/index.html
+++ b/index.html
@@ -11,18 +11,37 @@
 </head>
 <body>
     <!--inizio header-->
-    <header>
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-4 red">
-
+<header>
+    <div class="container-fluid grey-background ">
+        <div class="container container-md container-xl">
+            <div class="row">
+                <div class="col-6">
+                    <div class="col-6-header-content">
+                        <h2>start bootstrap</h2>
+                    </div>
                 </div>
-                <div class="col-4 red">
-                    
+                <div class="col-6">
+                    <!-- phone view -->
+                    <div class="col-6-header-content">
+                        <div class="hamburger">
+                            <div class="hamburger-content">
+                                <i class="fa-solid fa-bars"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- tablet and desktop view -->
+                    <div class="col-6-header-content none block">
+                        <ul class="tablet flex">
+                            <li><a href="#">portofolio</a></li>
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">contact</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+</header>
     <!--fine header-->
     <!--inizio main-->
     <main>
