[FEAT/STYLE]ins. contenuti jumbotron + comm.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,20 @@
     <!--inizio main-->
     <main>
         <!--prima sezione, jumbotron-->
-        <div class="jumbotron">
+        <div class="container-fluid green-backgroud color-white">
             <div class="container">
-                <div class="row justify-content-around">
-                    <div class="col-12"> 
-                        <div class="first-col"></div>                    
+                <div class="row ">
+                    <div class="col-12">
+                        <div class="col-12-content">
+                            <div class="img-container">
+                                <img src="./img/avatar.svg" alt="Avatar">
+                            </div>
+                            <h1 class="uppercase">start bootstrap</h1>
+                            <div class="line-star">
+                                <div class="line white"></div><i class="fa-solid fa-star"></i><div class="line white"></div>
+                            </div>
+                            <p class="uppercase text-center"> graphic artist - web designer - illustratotr</p>
+                        </div>
                     </div>
                 </div>
             </div>
