--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
     <title>Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <!--inizio header-->
@@ -130,18 +130,51 @@
             </div>
         </div>
         <!--fine sezione 6 colonne-->
-        <div class="container-fluid">
-            <div class="row justify-content-around second-row">
-                <div class="col-9 align-self-center yellow">
-        
+        <!--inizio sezione about-->
+        <!--colonna titolo-->
+        <div class="container-fluid green-backgroud color-white">
+            <div class="container container-md">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="col-12-content">
+                            <h4 class="color-white uppercase">about</h4>
+                            <div class="line-star">
+                                <div class="line white"></div><i class="fa-solid fa-star"></i><div class="line white"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--colonna testo-->
+                <div class="container-small">
+                    <div class="row">
+                        <div class="col-12 col-sm-6">
+                            <div class="col-12-content">
+                                <p class="about-us">Freelacer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy costumization</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6">
+                            <div class="col-12-content">
+                                <p class="about-us">Whether you're a student looking to showcase your work, a professional looking to attract client, or a graphic artist looking to share your projects this template is the perfect starting pont!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--bottone download-->
+                <div class="col-12">
+                    <div class="col-12-content">
+                        <button class="btn-download button"><i class="fa-sharp fa-solid fa-download"></i> Download</button>
+                    </div>
                 </div>
             </div>
         </div>
+        <!--fine sezione about-->
+        <!--inizio sezione contact me-->
         <div class="container-fluid">
             <div class="row justify-content-center third-row">
                 <div class="col-9 align-self-center green"></div>
             </div>
         </div>
+        <!--fine sezione contact me-->
     </main>
     <!--fine main-->
     <!--inizio footer-->
