[FEAT/STYLE] aggiunta footer, query e commenti

--- a/index.html
+++ b/index.html
@@ -169,9 +169,31 @@
         </div>
         <!--fine sezione about-->
         <!--inizio sezione contact me-->
-        <div class="container-fluid">
-            <div class="row justify-content-center third-row">
-                <div class="col-9 align-self-center green"></div>
+        <div class="container-fluid container-md">
+            <!--colonna titolo-->
+            <div class="row">
+                 <div class="col-12">
+                     <div class="col-12-content">
+                         <h4 class="uppercase">contact me</h4>
+                         <div class="line-star">
+                             <div class="line black"></div><i class="fa-solid fa-star color-balck "></i><div class="line black"></div>
+                         </div>
+                     </div>
+                 </div>
+            </div>
+            <!--colonna form-->
+            <div class="container-small">
+                <div class="row">
+                    <div class="col-12">
+                        <input type="text" placeholder="Name" name="Name">
+                        <input type="text" placeholder="Email Adress" name="emailadress">
+                        <input type="text" placeholder="Phone Number" name="phone number">
+                        <form action="#">
+                            <textarea name="Message" placeholder="Message" id="text" cols="20" rows="5"></textarea>
+                        </form>
+                        <button class="button send-form">Send</button>
+                    </div>
+                </div>
             </div>
         </div>
         <!--fine sezione contact me-->
@@ -179,12 +201,46 @@
     <!--fine main-->
     <!--inizio footer-->
     <footer>
-        <div class="container-fluid">
-            <div class="row justify-content-around">
-                <div class="col-9 gy-5"></div>
+        <div class="container-flui lightblu-background padding-bottom">
+            <!--inizio footer top-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="col-12-content color-white">
+                            <h6 class="uppercase">location</h6>
+                            <span>2215 Jhon Daniel Drive Clark, MO 54243</span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="col-12-content color-white">
+                            <h6 class="uppercase">around the web</h6>
+                            <div class="social flex">
+                                <div class="circle"><i class="fa-brands fa-facebook-f"></i></div>
+                                <div class="circle"><i class="fa-brands fa-google-plus-g"></i></div>
+                                <div class="circle"><i class="fa-brands fa-twitter"></i></div>
+                                <div class="circle"><i class="fa-brands fa-linkedin-in"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="col-12-content color-white text-center">
+                            <h6 class="uppercase ">about freelancer</h6>
+                            <p>Freelance is a free to use, open source Bootstrap theme created by <span class="green-color">Start Bootstrap</span></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="row justify-content-around blue">
-                <div class="col-9"></div>
+        </div>
+        <!--inizio footer low-->
+        <div class="container-fluid blu-background">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="col-12-content color-white">
+                            <p class="copyright">Copyright <i class="fa-regular fa-copyright"></i> Your Website 2019</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
