--- a/index.html
+++ b/index.html
@@ -8,38 +8,35 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <!--inizio header-->
 <header>
-    <div class="container-fluid grey-background ">
-        <div class="container container-md container-xl">
-            <div class="row">
-                <div class="col-6">
-                    <div class="col-6-header-content">
-                        <h2>start bootstrap</h2>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <!-- phone view -->
-                    <div class="col-6-header-content">
-                        <div class="hamburger">
-                            <div class="hamburger-content">
-                                <i class="fa-solid fa-bars"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- tablet and desktop view -->
-                    <div class="col-6-header-content none block">
-                        <ul class="tablet flex">
-                            <li><a href="#">portofolio</a></li>
-                            <li><a href="#">about</a></li>
-                            <li><a href="#">contact</a></li>
-                        </ul>
-                    </div>
-                </div>
+    <div class="container-fluid grey-background">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Start Bootstrap</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Portfolio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </div>
+          </nav>
     </div>
 </header>
     <!--fine header-->
